2009.11.08

* Added import checks in auth.py.
* Added test case for auth imports.
* Fixed up the import unit tests with reloads.

2009.11.07

* Added authentication support with cred for twisted.web2-based JSON-RPC
reources.
* Updated history file.
* Added test case for auth imports.

2009.11.06

* Reverted trunk to pre-version-work point.
* Cherry-picked the change that added missing deferred returns in two tests.
* Cherry-picked the change that added the testing helper subpackage.
* Cherry-picked the change that added the doctest runner.
* Cherry-picked changes to the examples and updated the example-runner.
* Added authentication infrasturcture so that twisted.web-based txJSON-RPC
servers can be written to support twisted.cred.

2009.10.20

* Added clean.sh admin script.
* Cleaned up TODO file.
* Updated meta file with more data and incremented the version to 0.3.
* Added utils subpackage.
* Updated setup.py to use the new utils subpackage.
* Added docs.
* Updated README.
* Cleaned up lots of unused imports.
* Formatting tweaks.
* Added a call to strip for the help-string-returning methods.
* Added a maxLength attribute to QueryFactory for custom settings by users.
* Updated proxy to instantiate QueryFactory with an optional maxLength
override.
* Updated history file.
* Cleaned up examples.
* Added an admin script for testing examples.
* Updated the commit script to run the exmaple tests.
* Added missing error handling in commit script.
* Added PYTHONPATH to example runner commands.
* Removed PYTHONPATH from admin/defs.sh.
* Removed debugging echo statement from commit.sh.
* Removed manual PYTHONPATH setting in example runner.
* Formatting tweaks.
* Updated TODO and README.
* Added admin upload script.

2008.11.10

* Added a test for None/null.
* Added a serializer for Python datetime -> JSON.
* Updated the version.
* Updated the commitAndPush script to pass the skip_tests parameter (and fixed
its filename extention).
* Added missing sudo to cleanup function.