@@ -1,6 +1,10 @@
 import os
 
+from zope.interface import Interface 
+
 from twisted.trial.unittest import TestCase
+
+from txjsonrpc.auth import HTTPAuthRealm
 
 
 class ImportTestCase(TestCase):
@@ -96,7 +100,31 @@ class ImportTestCase(TestCase):
 
 
 class HTTPAuthRealmTestCase(TestCase):
-    pass
+
+    def setUp(self):
+        self.realm = HTTPAuthRealm("a resource")
+
+    def test_creation(self):
+        self.assertEquals(self.realm.resource, "a resource")
+
+    def test_requestAvatarWeb(self):
+        from twisted.web.resource import IResource
+        interface, resource, logoutMethod = self.realm.requestAvatar(
+            "an id", None, IResource)
+        self.assertEquals(interface, IResource)
+        self.assertEquals(resource, self.realm.resource)
+        self.assertEquals(logoutMethod, self.realm.logout)
+
+    def test_requestAvatarWeb2(self):
+        from twisted.web2.iweb import IResource
+        interface, resource = self.realm.requestAvatar(
+            "an id", None, IResource)
+        self.assertEquals(interface, IResource)
+        self.assertEquals(resource, self.realm.resource)
+
+    def test_requestAvatarNonWeb(self):
+        self.assertRaises(NotImplementedError, self.realm.requestAvatar,
+                          "an id", None, [Interface])
 
 
 class WrapResourceTestCase(TestCase):
